Improved message for exporting skippable to dAISY 2.02 and improved accessible names of additional setting Dialogs/AdvancePreferencesSettings.resx

--- a/Obi/Obi/Dialogs/AdvancePreferencesSettings.resx
+++ b/Obi/Obi/Dialogs/AdvancePreferencesSettings.resx
@@ -125,10 +125,14 @@
     <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="m_CheckBoxListView.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 51</value>
+    <value>17, 75</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="m_CheckBoxListView.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="m_CheckBoxListView.Size" type="System.Drawing.Size, System.Drawing">
-    <value>397, 309</value>
+    <value>565, 451</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_CheckBoxListView.TabIndex" type="System.Int32, mscorlib">
@@ -147,9 +151,8 @@
     <value>3</value>
   </data>
   <data name="m_btnOk.AccessibleName" xml:space="preserve">
-    <value>Press OK to confirm changes</value>
+    <value>Ok, press to confirm changes</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_btnOk.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
@@ -157,10 +160,13 @@
     <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="m_btnOk.Location" type="System.Drawing.Point, System.Drawing">
-    <value>90, 377</value>
+    <value>129, 553</value>
+  </data>
+  <data name="m_btnOk.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="m_btnOk.Size" type="System.Drawing.Size, System.Drawing">
-    <value>99, 35</value>
+    <value>141, 51</value>
   </data>
   <data name="m_btnOk.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -181,7 +187,7 @@
     <value>2</value>
   </data>
   <data name="m_btnCancel.AccessibleName" xml:space="preserve">
-    <value>Press Cancel to go back to main preferences menu</value>
+    <value>Cancel, press to go back to main preferences menu</value>
   </data>
   <data name="m_btnCancel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -190,10 +196,13 @@
     <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="m_btnCancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>235, 377</value>
+    <value>336, 553</value>
+  </data>
+  <data name="m_btnCancel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="m_btnCancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>99, 35</value>
+    <value>141, 51</value>
   </data>
   <data name="m_btnCancel.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -214,10 +223,13 @@
     <value>1</value>
   </data>
   <data name="m_tbDialogDesc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 12</value>
+    <value>19, 18</value>
+  </data>
+  <data name="m_tbDialogDesc.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="m_tbDialogDesc.Size" type="System.Drawing.Size, System.Drawing">
-    <value>397, 21</value>
+    <value>565, 28</value>
   </data>
   <data name="m_tbDialogDesc.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -238,13 +250,16 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 15</value>
+    <value>10, 22</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>434, 423</value>
+    <value>620, 620</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9pt</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Additional Preferences Settings</value>
