--- a/trunk/Obi/Obi/Dialogs/ObiConfiguration.resx
+++ b/trunk/Obi/Obi/Dialogs/ObiConfiguration.resx
@@ -205,13 +205,13 @@
     <value>19, 201</value>
   </data>
   <data name="m_lblShortcutsProfile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 15</value>
+    <value>136, 15</value>
   </data>
   <data name="m_lblShortcutsProfile.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
   <data name="m_lblShortcutsProfile.Text" xml:space="preserve">
-    <value>Select Shortcuts Profile :</value>
+    <value>Select shortcuts profile :</value>
   </data>
   <data name="&gt;&gt;m_lblShortcutsProfile.Name" xml:space="preserve">
     <value>m_lblShortcutsProfile</value>
@@ -238,13 +238,13 @@
     <value>71, 168</value>
   </data>
   <data name="m_lblSelectProfile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 15</value>
+    <value>84, 15</value>
   </data>
   <data name="m_lblSelectProfile.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
   </data>
   <data name="m_lblSelectProfile.Text" xml:space="preserve">
-    <value>Select Profile :</value>
+    <value>Select profile :</value>
   </data>
   <data name="&gt;&gt;m_lblSelectProfile.Name" xml:space="preserve">
     <value>m_lblSelectProfile</value>
